--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 resultsContainer.classList.remove('hidden');
                 downloadCsvBtn.classList.add('hidden');
                 resultsTableBody.innerHTML = '';
-                statusMessage.textContent = 'Fetching data from the server... This may take a moment.';
+                statusMessage.textContent = 'Fetching data from the server... This may take a while... A break is recommended :)';
                 statusMessage.className = 'mb-4 p-4 bg-blue-500/30 rounded-lg';
 
                 const formData = new FormData(form);
@@ -315,3 +315,4 @@
     </script>
 </body>
 </html>
+
